// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation test case should render correctly with the default destination 1`] = `
<div>
  <a
    class="chakra-link css-kf8s5h"
    href="/"
  >
    Mock navigation
  </a>
</div>
`;

exports[`Navigation test case should render correctly with the given destination 1`] = `
<div>
  <a
    class="chakra-link css-1h1hto7"
    href="/mock"
  >
    Mock navigation
  </a>
</div>
`;
